# infrahub.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  docker-compose.yml
docs/: client.md  codegen.md  compat.md  dev.md  index.md  local-infrahub.md
examples/: README.md  generated_api.md  simple_query.rs  typed_query.rs
operations/: mutation_branch_create.graphql  mutation_branch_delete.graphql  mutation_branch_merge.graphql  mutation_branch_rebase.graphql  mutation_branch_update.graphql  mutation_branch_validate.graphql  mutation_builtin_i_p_address_update.graphql  mutation_builtin_i_p_namespace_update.graphql  mutation_builtin_i_p_prefix_update.graphql  mutation_builtin_tag_create.graphql  mutation_builtin_tag_delete.graphql  mutation_builtin_tag_update.graphql  mutation_builtin_tag_upsert.graphql  mutation_convert_object_type.graphql  mutation_core_account_create.graphql  mutation_core_account_delete.graphql  mutation_core_account_group_create.graphql  mutation_core_account_group_delete.graphql  mutation_core_account_group_update.graphql  mutation_core_account_group_upsert.graphql  mutation_core_account_role_create.graphql  mutation_core_account_role_delete.graphql  mutation_core_account_role_update.graphql  mutation_core_account_role_upsert.graphql  mutation_core_account_update.graphql  mutation_core_account_upsert.graphql  mutation_core_action_update.graphql  mutation_core_artifact_check_create.graphql  mutation_core_artifact_check_delete.graphql  mutation_core_artifact_check_update.graphql  mutation_core_artifact_check_upsert.graphql  (+370 more)
src/: error.rs  (+7 more)
(+23 files in other folders)
