[package]
name = "infrahub"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "small graphql client for infrahub"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
graphql-parser = "0.4"

[dev-dependencies]

[features]
default = []
