[workspace]
members = ["test-client"]

[package]
name = "infrahub"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "small graphql client for infrahub"
readme = "README.md"
repository = "https://github.com/cyberwitchery/infrahub.rs"
homepage = "https://github.com/cyberwitchery/infrahub.rs"
documentation = "https://docs.rs/infrahub"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
graphql-parser = "0.4"

[dev-dependencies]

[features]
default = []
